# FLATiron

./: .coveragerc  .gitignore  .readthedocs.yaml  FLATiron.yaml  FLATiron.yml  Makefile  README.md  meeting_notes.md  pyproject.toml  requirements.txt  setup.py  tox.ini
apps/: app_incompressible_flow.py  app_scalar_transport.py  common.py  incompressible_flow.py  scalar_transport.py
apps/inputs/: c0.h5  navier_stokes_foc.inp  navier_stokes_ldc.inp  steady_adr.inp  steady_scalar_transport.inp  stokes_ldc.inp  stokes_pressure_driven.inp  transient_adr.inp  transient_scalar_transport.inp
apps/inputs/c.bp/: data.0  md.0  md.idx  profiling.json
apps/mesh/: rect.geo  unit_square.geo
demo/demo_adios4dolfinx/: _run_nse.py  demo_bp_to_visualization.py  demo_read_function.py
demo/demo_block_solver/: demo_steady_galerkin_projection_block.py  demo_transient_nse_block.py
demo/demo_free_convection/: demo_free_convection.py
demo/demo_functions/: demo_indicator_field.py
demo/demo_particle_tracking/: demo_steady_massless_tracers.py
demo/demo_scalar_transport_edge_stab/: demo_scalar_transport_edge_stab.py
demo/demo_steady_adr/: demo_steady_adr_1D.py  demo_steady_adr_2D.py  demo_steady_adr_3D.py
demo/demo_steady_multiphysics/: demo_steady_multiphysics.py
demo/demo_steady_navier_stokes/: demo_steady_navier_stokes.py
demo/demo_steady_stokes/: demo_steady_stokes.py
demo/demo_transient_adr/: demo_transient_adr_1D.py  demo_transient_adr_2D.py
demo/demo_transient_navier_stokes/: demo_transient_inlet.py  demo_transient_navier_stokes.py
demo/mesh/: 2db.geo  2dfd.geo  bfs.geo  foc.geo
demo/mesh/geo/: angle_rect.geo  bifurcation.geo  cylinder.geo  foc.geo  rect.geo  unit_cube.geo  unit_square.geo
docs/: Makefile  make.bat
docs/scratch/: app_demo.rst  app_steady_adr.rst  demo_bone_scaffold.rst  demo_convection_diffusion.rst  demo_coupled_diffusion_reaction.rst  demo_lib_driven_cavity_stokes.rst  demo_moving_front.rst  demo_navier_stokes.rst  demo_steady_adr.rst  demo_steady_diffusion.rst  demo_steady_stokes.rst  demo_stokes_porous.rst  demo_transient_diffusion.rst  h5_mod.rst  io.rst  lib_demo.rst  multiphysics_problem.rst  physics.rst  references.rst  scalar_transport_problem.rst  transient_navier_stokes.rst
docs/source/: app_demo.rst  app_navier_stokes.rst  app_steady_adr.rst  app_transient_navier_stokes.rst  conf.py  demo_2_species_reaction_2D.rst  demo_adr_edge_stab.rst  demo_coupled_diffusion_reaction.rst  demo_steady_adr.rst  demo_steady_nse.rst  demo_stokes_external_force.rst  demo_time_dependent_navier_stokes.rst  demo_transient_adr.rst  demo_transient_nse.rst  elastodynamics.rst  h5_mod.rst  index.rst  input_object.rst  install.rst  installation.rst  lib_demo.rst  mesh.rst  meshing.rst  multiphysics_problem.rst  navier_stokes.rst  physics.rst  references.rst  scalar_transport_problem.rst  stokes_flow.rst  toc_modules.rst  transient_navier_stokes.rst  transient_scalar_transport_problem.rst
feFlow/: __init__.py
feFlow/functions/: profiles.py
feFlow/io/: h5_mod.py  input_object.py
feFlow/physics/: incompressible_navier_stokes.py  physics_problem.py  scalar_transport.py  stokes_flow.py  transient_scalar_transport.py
feFlow/scripts/: extract_velocity_pressure
feFlow/solver/: physics_solver.py
joss-manuscript/: paper.bib  paper.md
src/flatiron_tk/: __init__.py
tests/: conftest.py
tests/functions/: test_indicator.py  test_point_evaluator.py  test_profiles.py
tests/mesh/: test_basic_mesh.py  test_mesh.py
tests/physics/: test_multiphysics.py  test_scalar_transport.py  test_steady_stokes.py  test_transient_scalar_transport.py
workflows/: draft-pdf.yml
(+264 files in other folders)
